--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h3>New Year</h3>
+    
+   <header class="banner-container">
+    <div class="banner-content">
+        <p>Happy New Year</p>
+        <h1>New Year <br> 
+        Party Celebration</h1>
+    </div>
+    <main>
+        <!-- 65% off section start here -->
+         <section class="second-section-container">
+            <div>
+                <h1>65% OFF</h1><br>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p><br>
+                <h3>ALL CATEGORIES</h3>
+            </div>
+
+              <div class="image-container">
+                <img src="images/New -Year -Photo.png" alt="">
+              </div>
+
+         </section>
+          <!-- 65% off section end here -->
+
+
+        <footer></footer>
+    </main>
+   </header>
 </body>
 </html>
