complete party section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
          </section>
           <!-- 65% off section end here -->
 
+          <!-- mdinight party section start here -->
+           <section class="midnight-party-container">
+
+            <div class="left-side-content">
+            <h2>Welcome to <br> midnight party</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <span id="midnight-button">Join Now</span>
+            </div>
+
+            <div class="right-side-content">
+              <img src="images/Group 70.png" alt="" class="mid-img">
+            </div>
+           </section>
+           <!-- mdinight party section end here -->
+
+
+
 
         <footer></footer>
     </main>
