holiday sale done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="left-side-content">
             <h2>Welcome to <br> midnight party</h2>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            <span id="midnight-button">Join Now</span>
+            <span id="midnight-button">JOIN NOW</span>
             </div>
 
             <div class="right-side-content">
@@ -45,7 +45,25 @@
            </section>
            <!-- mdinight party section end here -->
 
+         <!--Holiday section start here-->
+         <section class="holiday-section-container">
+          <div class="holdyday-text-container">
+            <h5>WHAT IS FUNCTIONAL</h5>
+            <h2><span id="holiday">Holidays</span> Sale 50%</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+              molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+          </div>
+           <div class="solid-color"></div>
+            <div class="gift-box">
+              <img src="images/gift-box.png" alt="" class="gift">
 
+              <div class="discount">
+                <img src="images/Discount.png" alt="" class="offer">
+              </div>
+            </div>
+          
+         </section>
+          <!--Holiday section end here-->
 
 
         <footer></footer>
