portfolio section done

--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
 
          <!--Holiday section start here-->
          <section class="holiday-section-container">
+
           <div class="holdyday-text-container">
+
             <h5>WHAT IS FUNCTIONAL</h5>
             <h2><span id="holiday">Holidays</span> Sale 50%</h2>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
               molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+
           </div>
+
            <div class="solid-color"></div>
             <div class="gift-box">
               <img src="images/gift-box.png" alt="" class="gift">
@@ -61,11 +65,45 @@
                 <img src="images/Discount.png" alt="" class="offer">
               </div>
             </div>
-          
+
          </section>
           <!--Holiday section end here-->
+           <!--portfolio section start here-->
+           <section class="portfolio-section-container">
+            <div class="portfolio-text-content">
+              <h5>THE BEST GIFTS</h5>
+              <h3>Our Awesome Portfolio</h3>
+              <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+             
+       <div class="portfolio-items">
+           <div class="item">
+            <img src="images/yellow-bag.png" alt="">
+           </div>
 
+           <div class="item">
+            <img src="images/bag.png" alt="">
+           </div>
 
+           <div class="item">
+            <img src="images/red -shoe.png" alt="">
+           </div>
+
+           <div class="item">
+            <img src="images/white-shoe.png" alt="">
+           </div>
+
+           <div class="item">
+            <img src="images/sunglass.png" alt="">
+           </div>
+
+           <div class="item">
+            <img src="images/ring.png" alt="">
+           </div>
+
+         </div>
+           </section>
+            <!--portfolio section end here-->
         <footer></footer>
     </main>
    </header>
