--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     
@@ -104,7 +107,45 @@
          </div>
            </section>
             <!--portfolio section end here-->
-        <footer></footer>
+        <footer class="footer-container">
+  <div class="footer-first-section"> 
+    <div>
+      <p>
+        44, Big Building Roosevelt Street <br>
+            Beach Gardens Florida 33410
+      </p>
+    </div>
+         <div>
+         <span class="contact">
+          <i class="fa-solid fa-phone-volume"></i>
+          <p>+00 123 584 124</p>
+         </span>
+
+         <span class="contact">
+          <i class="fa-brands fa-chrome"></i>
+          <p>www.google.com</p>
+         </span>
+
+         </div>
+       </div> 
+       <hr class="hr"/> 
+
+       <!-- social icons section-->
+
+      <div class="social-icons">
+        <img src="icons/Facebook.png" alt="">
+        <img src="icons/Instagram.png" alt="">
+        <img src="icons/Twitter.png" alt="">
+        <img src="icons/Linkedin.png" alt="">
+      </div>
+      <hr class="hr1"/> 
+
+      <div class="footer-end-text">
+
+       <p>2017, All Rights Reserved.</p>
+       <p>Unsubscribe</p>
+      </div>
+        </footer>
     </main>
    </header>
 </body>
