design portfolio section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsive.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -36,7 +37,9 @@
           <!-- mdinight party section start here -->
            <section class="midnight-party-container">
 
-            <div class="left-side-content">
+         <!-- <div class="midnight-content"> -->
+
+          <div class="left-side-content">
             <h2>Welcome to <br> midnight party</h2>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             <span id="midnight-button">JOIN NOW</span>
@@ -45,13 +48,50 @@
             <div class="right-side-content">
               <img src="images/Group 70.png" alt="" class="mid-img">
             </div>
+
+         <!-- </div> -->
+
            </section>
            <!-- mdinight party section end here -->
+
+           <!--new park section start here-->
+           <section class="new-park-section-container">
+
+          <div class="new-park-text">
+            <h4> <span class="color">Place:</span> New Park Hotel <br>
+              <span class="color">Date:</span> 31 December Night 2023 <br>
+             <span class="color">Time:</span> Evening 7.30 pm to 12.30 am</h4> 
+          </div>
+          <button type="join">JOIN NOW</button>
+           </section>
+           <!--new park section end here-->
+
+           <!--comming soon section start here-->
+           <section>
+          <div class="Coming-soon-content">
+            <div class="text-content">
+              <h4>New Best Offer</h4>
+              <h2>Coming Soon</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, quasi! Mollitia consequuntur nam ducimus.</p>
+            </div>
+
+            <div class="Ellipse">
+              <img src="./images/Ellipse 1.png" alt="">
+            </div>
+
+            <div class="new-year">
+              <h2 style="color: red;">2024</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur. </p>
+              <img src="./images/Group 96.png" alt="">
+            </div>
+          </div>
+           </section>
+           <!--comming soon section end here-->
 
          <!--Holiday section start here-->
          <section class="holiday-section-container">
 
-          <div class="holdyday-text-container">
+          <div class="holiday-text-container">
 
             <h5>WHAT IS FUNCTIONAL</h5>
             <h2><span id="holiday">Holidays</span> Sale 50%</h2>
@@ -71,6 +111,7 @@
 
          </section>
           <!--Holiday section end here-->
+
            <!--portfolio section start here-->
            <section class="portfolio-section-container">
             <div class="portfolio-text-content">
@@ -107,23 +148,44 @@
          </div>
            </section>
             <!--portfolio section end here-->
+
+            <!--subscriber section start here-->
+
+            <section class="Subscribe-section-container">
+            <div class="Subscribe-content">
+              <div class="img">
+                <img src="images/gmail.png" alt=""> <br>
+              </div>
+              <div class="subscribe-text-container">
+                <h2>Subscribe Newsletter</h2> <br>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed  molestie malesuada. 
+                   Ipsum sed sodales risus ut lentesque vel euismod. </p>
+              </div>
+              <div class="Subscribe">
+                <input type="text" name="" id="" placeholder="Subscribe">
+                
+              </div>
+
+            </div>
+            </section>
+            <!--subscriber section endhere-->
         <footer class="footer-container">
   <div class="footer-first-section"> 
-    <div>
+    <div class="adress">
       <p>
-        44, Big Building Roosevelt Street <br>
+        44, Big Building Roosevelt Street <br> <br>
             Beach Gardens Florida 33410
       </p>
     </div>
          <div>
          <span class="contact">
           <i class="fa-solid fa-phone-volume"></i>
-          <p>+00 123 584 124</p>
-         </span>
+          <p> +00 123 584 124</p> 
+         </span> <br>
 
          <span class="contact">
           <i class="fa-brands fa-chrome"></i>
-          <p>www.google.com</p>
+          <p> www.google.com</p>
          </span>
 
          </div>
