responsive full page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <h1>New Year <br> 
         Party Celebration</h1>
     </div>
+
+  </header>
+
     <main>
         <!-- 65% off section start here -->
          <section class="second-section-container">
@@ -67,7 +70,7 @@
            <!--new park section end here-->
 
            <!--comming soon section start here-->
-           <section>
+           <section class="Coming-soon-container">
           <div class="Coming-soon-content">
             <div class="text-content">
               <h4>New Best Offer</h4>
@@ -209,6 +212,8 @@
       </div>
         </footer>
     </main>
-   </header>
+   
+
+
 </body>
 </html>
