added section width

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <body>
     
    <header class="banner-container">
+  
     <div class="banner-content">
-        <p>Happy New Year</p>
-        <h1>New Year <br> 
-        Party Celebration</h1>
-    </div>
+      <p>Happy New Year</p>
+      <h1>New Year <br> 
+      Party Celebration</h1>
+  </div>
+ 
 
   </header>
 
@@ -40,7 +42,7 @@
           <!-- mdinight party section start here -->
            <section class="midnight-party-container">
 
-         <!-- <div class="midnight-content"> -->
+         <div class="midnight-content">
 
           <div class="left-side-content">
             <h2>Welcome to <br> midnight party</h2>
@@ -52,7 +54,7 @@
               <img src="images/Group 70.png" alt="" class="mid-img">
             </div>
 
-         <!-- </div> -->
+         </div>
 
            </section>
            <!-- mdinight party section end here -->
